# CADAnnotatorTool

./: CMakeLists.txt  OcctQtViewer.cpp  README.md  main.cpp
config/: setup.json
src/: OcctLabelTools.cpp  OcctLabelTools.hpp  OcctQtViewer.cpp  OcctQtViewer.h  main.cpp
src/libs/: Button.cpp  Button.hpp  MainWindow.cpp  MainWindow.hpp  Utils.cpp  Utils.hpp  Viewer.cpp  Viewer.hpp
